# IBDMap

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  bench_main.cpp  ibdf_active_set_stats  ibdreduce_environment.yml  main.cpp  test_count.py
.github/workflows/: cmake.yml
IBDReduce/: geneticmap.py  ibdreduce.py  ibdreduce_v2.py  ibdreduce_v3.py  pyproject.toml  requirements.txt
IBDReduce/doc/source/: conf.py  index.rst
IBDReduce/ibdreduce/: ibdreduce.py
IBDReduce/ibdreduce/geneticmap/: __init__.py
IBDReduce/old_versions/: ibdreduce_v1.py
binary_format/: IBDF_FORMAT.md  ibd_format.hpp  ibd_read.cpp  ibd_reader.hpp  mapped_file.hpp
build-scripts/: docker-build.sh  static-build-on-focal.sh
cmake/: FindGperftools.cmake
docs/: docker-documentation.md
link/: binomial.cpp  binomial.hpp  family.cpp  family.hpp  gaussian.cpp  gaussian.hpp
src/: breakpoint.hpp  fishertest.hpp  geneticmap.hpp  glm.hpp  ibdlib.cpp  ibdlib.hpp  ibdlibclasses.hpp  indexer.hpp  indexsort.hpp  info.cpp  info.hpp  inputvalidator.cpp  inputvalidator.hpp  iscompressed.hpp  isgzipped.hpp  jointhreads.hpp  math.cpp  math.hpp  parameters.hpp  parquet_reporter.cpp  parquet_reporter.hpp  parser.cpp  parser.hpp  permutation.cpp  permutation.hpp  phenotypes.cpp  phenotypes.hpp  reporter.hpp  resultrow.hpp  source.cpp  source.hpp  split.hpp  statistic.cpp  statistic.hpp  threadpool.hpp  threadsafequeue.hpp  transposed_phenotypes.hpp  types.hpp
static-build/: CMakeLists.txt
tests/: test_fdr.py  test_permutation_columns.py  test_permutation_equivalence.cpp
tests/data/: sample_chr1_run0.txt  sample_chr1_run1.txt
tests/data/gmap/: sample.gmap
tools/: IBDinput_rewrite_v3.py  calculate_gwavgdiff.py  calculate_pairwise_avg.py  convert_ilash.py  ibd_input.py  ibd_to_binary.py  ibdf_active_set_stats.cpp  ibdmap_text_to_parquet.py  ibdreduce_analysis.py
